--- a/ansible/roles/jenkins/vars/main.yml
+++ b/ansible/roles/jenkins/vars/main.yml
@@ -9,3 +9,19 @@ repo:
 
 wizard:
   java_args: "-Djava.awt.headless=true -Djenkins.install.runSetupWizard=false"
+
+jenkins:
+  user: admin 
+  pwd: jenkinsAdmin
+  host: 'http://{{ ansible_facts["eth1"]["ipv4"]["address"] }}:8080/'
+  prefix: 'login?from=%2F'
+  update_center: "https://updates.jenkins.io/update-center.json"
+  dest: 'default.json'
+  home: '/var/lib/jenkins/'
+  update_path: 'updates/'
+  init: 'init.groovy.d'
+
+plugins:
+  - 'blueocean'
+  - 'ansible'
+  - 'terraform'
